More JME client tests